[package]
name = "CRB_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = {version = "2.3.0", features = ["rayon", "serde"]}
itertools = "0.13.0"
lazy_static = "1.4.0"
marlu = {version = "0.11.0", features = ["serde"]}
ndarray = {version = "0.16.0", features = ["rayon"]}
ndarray-linalg = "0.16.0"
rayon = "1.10.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_yaml = "0.9.34"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
vec1 = {version = "1.12.1", features = ["serde"]}
yaml-rust2 = "0.8.1"
