[package]
name = "CRB_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
fitsio = "0.20.0"
fitsio-sys = "0.4.0"
indexmap = {version = "2.3.0", features = ["rayon", "serde"]}
itertools = "0.13.0"
lazy_static = "1.4.0"
marlu = {version = "0.11.0", features = ["serde"]}
mwalib = "1.4.0"
ndarray = {version = "0.16.0", features = ["rayon"]}
ndarray-linalg = "0.16.0"
num-complex = "0.4.6"
physical_constants = "0.5.0"
rayon = "1.10.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_yaml = "0.9.34"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
vec1 = {version = "1.12.1", features = ["serde"]}

[profile.dev]
opt-level = 3
